--- a/Context-Api/src/Components/Body.module.css
+++ b/Context-Api/src/Components/Body.module.css
@@ -29,7 +29,6 @@
   font-size: 1.2rem;
   margin-bottom: 10px;
   font-weight: bold;
-  color: #000;
 }
 
 .card-text {
@@ -50,4 +49,11 @@
 
 .btn-primary:hover {
   background-color: #333;
+}
+.btn {
+  padding: 10px 15px;
+  border-radius: 5px;
+  text-decoration: none;
+  cursor: pointer;
+  border: none;
 }
